# alloy-check

./: AGENTS.md  Cargo.toml  README.md  SPECIFICATION.md  action.yml
.github/workflows/: release.yml
src/: checker.rs  main.rs  report.rs  workspace.rs
src/checker/: ast.rs  cargo.rs  metadata.rs
src/checker/ast/: index.rs  utils.rs  visitor.rs
tests/: test_ron_output.rs
tests/non_compliant/: Cargo.toml
tests/non_compliant/src/: main.rs
