[package]
name = "alloy-check"
description = "A tool to enforce strict Rust workspace standards"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
cargo_metadata = "0.23"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
walkdir = "2.5"
anyhow = "1.0"
colored = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
globset = "0.4"
rayon = "1.11"
ron = "0.12"

[package.metadata.alloy-check]
ignore = ["tests/**/*"]
